# ppsetuptools

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  check_all.ps1  pyproject.toml  setup.py
.github/workflows/: pytest.yml  python-publish.yml
ppsetuptools/: __init__.py  mypy.ini  ppsetuptools.py
scripts/: check_all.ps1  check_all.sh
tests/ppsetuptools/: test_ppsetuptools.py
tests/ppsetuptools/data/: test_pyproject.toml
