[project]
name = 'ppsetuptools'
project_name = 'ppsetuptools'
version = '1.0'
description = 'Drop in replacement for setuptools that uses pyproject.toml files'
long_description = 'file: README.md'
url = 'https://github.com/TheCleric/ppsetuptools'
author = 'Adam Weeden'
author_email = 'adamweeden@gmail.com'
license = 'LGPL v3'
license_file = 'file: LICENSE'
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries',
    'License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8'
]
keywords = 'setuptools pyproject setup.py pyproject.toml replacement'
dependencies = [
    'setuptools>=38.6.0',
    'toml',
]
include_package_data = true

[project.optional-dependencies]
dev = [
    'autopep8',
    'isort',
    'pre-commit',
    'setuptools',
    'twine',
    'upgrade-ensurepip',
    'wheel',
]
test = [
    'mypy',
    'pydantic',
    'pylint',
    'pytest',
    'pytest-cov',
]

[build-system]
requires = [
    'setuptools>=38.6.0',
    'wheel',
    'toml',
    'twine',
]
build-backend = 'setuptools.build_meta'

[tool.autopep8]
max_line_length = 120

[tool.pylint.pep8]
'max-line-length' = 120

[tool.pylint.MASTER]
ignore = 'venv'

[tool.pylint.'MESSAGES CONTROL']
enable = [
    'errors',
    'warnings',
]
disable = [
    'missing-class-docstring',
    'missing-function-docstring',
    'missing-module-docstring',
    'too-few-public-methods',
]
